# local-llm-mcp

./: .env.example  .gitignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.mcp  INSTALL.md  PRD.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  VLLM_V1_UPDATE_PLAN.md  VLLM_VERSION_REALITY_CHECK.md  commit_changes.ps1  docker-compose.ollama-webui.yml  docker-compose.vllm-v10.yml  docker-compose.vllm-v8.yml  glama.json  list_files.py  llms-full.txt  llms.txt  manifest.json  mcp.json  pyproject.toml  remove_description_params.py  requirements.txt  run_server.py  setup.py  simple_test.py  start.ps1  test_fastmcp.py  test_fastmcp_import.py  test_fastmcp_install.py  test_fastmcp_simple.py  test_imports.py  test_manifest.json  test_mcp.py  (+5 more)
.windsurf/docs/Artificial_Intelligence/: README.md
.windsurf/docs/Artificial_Intelligence/basics/: diffusion_models.md  short_history_of_ai.md  transformer_models.md
.windsurf/docs/Artificial_Intelligence/companies/: amazon_ai.md  anthropic.md  baidu_ai.md  deepseek.md  gemini.md  gemini_cli.md  google_deepmind.md  huggingface.md  meta_ai.md  microsoft_ai.md  openai.md  sensetime.md
.windsurf/docs/Artificial_Intelligence/hosted_llms/: README.md  gemini.md  openai.md
.windsurf/docs/Artificial_Intelligence/image_and_video/: overview.md  sora.md  stable_diffusion.md  veo_3.md
.windsurf/docs/Artificial_Intelligence/papers/: seminal_papers.md
.windsurf/docs/Artificial_Intelligence/persons/: README.md  andrej_karpathy.md  geoffrey_hinton.md  person_template.md  rich_sutton.md  stuart_russell.md  timnit_gebru.md
.windsurf/docs/Artificial_Intelligence/philosophy/: neurophilosophy_of_consciousness.md
.windsurf/docs/General_Software_Tools/: README.md
.windsurf/docs/Projects/: myAIPlayground.md
.windsurf/docs/Windsurf generated flows/: README.md
.windsurf/docs/mcp/: OFFICE365_MCP_ANALYSIS.md
.windsurf/rules/global_rules/: rules1.md.bak.20250730225106
_llm_test_scripts/: check_fastmcp.py  check_fastmcp_import.py  check_fastmcp_install.py  debug_fastmcp.py  inspect_fastmcp.py  test_fastmcp.py  test_fastmcp_direct.py  test_fastmcp_import.py  test_fastmcp_install.py  test_fastmcp_simple.py  test_import.py  test_imports.py  test_managers.py  test_mcp.py  test_minimal.py  test_registration.py  test_server.py  test_startup.py
config/: performance-tuning.yaml  vllm-config.yaml
docker/: .env.example  Dockerfile.vllm-v10  README.md
docker/config/: mcp-config.json
docker/scripts/: backup.ps1  backup.sh  docker-manage.ps1  docker-manage.sh  download-models.ps1  download-models.sh  health-check.ps1  monitor.ps1  monitor.sh  quick-setup.ps1
docs/: LOCAL_LLM_GUIDE.md  PRD.md  PURPOSE.md  REPOSITORY_STATUS.md  WINDSURF_ANALYSIS_2025_08_24.md  WINDSURF_ASSESSMENT.md  dora_integration.md  hardware_requirements.md  integrations.md  lmstudio_mcp_integration.md  lora_gradio_tools.md  moe_guide.md  ollama_webui_integration.md  qlora_evolved.md  sparse_finetuning.md  unsloth_integration.md  vllm_integration.md
docs/development/: README.md
docs/gradio/: README.md
docs/integrations/: README.md  qwen-3.6-moe.md
docs/lora/: README.md
docs/notepadpp/: README.md
docs/repository-protection/: README.md
docs/tool_calling/: README.md
docs/upgrade/: 01_HARDWARE_ANALYSIS_AND_SETUP.md  02_PROVIDER_IMPLEMENTATION.md  03_MCP_TOOLS_INTEGRATION.md
examples/: gradio_advanced_demo.py
examples/finetuning/: README.md  dora_example.py  moe_example.py  qlora_evolved_example.py  sparse_finetuning_example.py
mcpb/: README.md  manifest.json
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/src/src/llm_mcp/: main.py  (+5 more)
scripts/: check_gateway.py  cua-nsis-config.json  setup_integrations.py
src/llm_mcp/: __init__.py  __main__.py  compat_server.py  config.py  main.py  minimal_server.py  server.py  state.py  transport.py
src/llm_mcp/core/: config.py  startup.py
src/llm_mcp/gateway/: README.md  TODO.md  __init__.py  base.py  router.py
src/llm_mcp/providers/: __init__.py  base.py  multimodal_provider.py  vllm.py
src/llm_mcp/services/: mcp_server_manager.py  model_intelligence.py  model_manager.py  model_service.py  provider_factory.py
src/llm_mcp/tools/: __init__.py  dora_tools.py  generation_tools.py  gpu_manager.py  gradio_tools.py  help_tools.py  lora_tools.py  model_management_tools.py  model_tools.py  moe_tools.py  monitoring_tools.py  multimodal_tools.py  portmanteau_finetuning.py  portmanteau_generation.py  portmanteau_google_cloud.py  portmanteau_gpu.py  portmanteau_health.py  portmanteau_help.py  portmanteau_huggingface.py  portmanteau_lmstudio.py  portmanteau_models.py  portmanteau_multimodal.py  portmanteau_ollama.py  portmanteau_vllm.py  qloraevolved_tools.py  sparse_tools.py  system_tools.py  tool_calling.py  tool_utils.py  unsloth_tools.py  vllm_tools.py
src/llm_mcp/utils/: __init__.py  gpu.py  logging.py
tests/: test_generation_integration.py  test_mcp_server_manager.py  test_tool_registration.py  test_vllm_endpoints.py  test_vllm_provider.py
tools/: CHAT_TERMINAL.md  Check-WindowsCompliance.ps1  CheckAndUpdateMcpRepos.ps1  DXT_PACKAGING.md  Fix-Markdown.ps1  Fix-McpRepos.ps1  FixMarkdown.ps1  Invoke-MarkdownLint.ps1  List-Repos.ps1  MARKDOWN_RULES.md  README.md  Remove-MarkdownLinting.ps1  Setup-AllMcpRepos.ps1  chat_terminal.py  cli_commands.py  dxt_config.json  example_persona.yaml  example_rulebook.yaml  mcp_chat.py  mcpb_generator.py  run_chat.py
web_sota/: biome.json  index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202255  tailwind.config.js  tsconfig.app.json  vite.config.ts
web_sota/backend/: server.py
web_sota/backend/routes/: logging.py
web_sota/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web_sota/src/api/: chat-prefs.ts  client.ts  defaults.ts  telemetry.ts
web_sota/src/common/: apps-catalog.ts  personalities.ts  speech.ts
web_sota/src/content/: local-llm-guide.ts
web_sota/src/pages/: Logging.tsx  analytics.tsx  chat.tsx  dashboard.tsx  fleet.tsx  help.tsx  performance.tsx  settings.tsx  vision.tsx
(+213 files in other folders)
