[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-mcp"
version = "1.0.0"  # Production release with Pydantic V2 and enhanced logging
description = "🔥 Production-ready FastMCP 2.12 server for managing local and cloud LLMs with vLLM 1.0 integration and Claude Desktop compatibility"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sandra Schipal", email = "sandra@example.com"}
]
dependencies = [
    # Core MCP
    "fastmcp>=3.1.0,<4",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # AI/ML Core (vLLM dependencies)
    "torch>=2.4.0", # Required by vLLM
    "transformers>=4.44.0", # Required by vLLM
    "tokenizers>=0.19.0", # Required by vLLM
    "vllm>=0.8.0,<0.9.0", # Kept per user request
    # Inference optimization (lightweight)
    "accelerate>=0.32.0", # For model loading optimization
    # Basic image support
    "pillow>=10.4.0",
    # System monitoring
    "psutil>=6.0.0",
    "gputil>=1.4.0",
    # Logging & monitoring
    "structlog>=24.2.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    # Utilities
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "tenacity>=8.5.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "diffusers>=0.29.0",
    "opencv-python>=4.10.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.24.0",
    "pandas>=2.2.0",
    "openai>=1.35.0",
    "anthropic>=0.31.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "prometheus-client>=0.20.0",
]

# REMOVED TRAINING DEPENDENCIES (~1.5GB saved):
# - peft>=0.12.0 (LoRA training)
# - bitsandbytes>=0.43.0 (quantization training)
# - datasets>=2.20.0 (training datasets)
# - opencv-python>=4.10.0 (heavy computer vision)
# - sentence-transformers>=3.0.0 (embeddings training)
# - pandas>=2.2.0 (data analysis)
#
# KEPT FOR vLLM:
# - torch (required by vLLM)
# - transformers (required by vLLM)
# - tokenizers (required by vLLM)
# - accelerate (model loading)

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests>=2.32.0",
    "types-pyyaml>=6.0.0",
]

full = [
    # Additional providers
    "openai>=1.35.0",
    "anthropic>=0.31.0",
    
    # Advanced features
    "gradio>=4.38.0",
    "streamlit>=1.36.0",
    
    # Additional ML tools
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/sandraschi/local-llm-mcp"
Documentation = "https://github.com/sandraschi/local-llm-mcp#readme"
Issues = "https://github.com/sandraschi/local-llm-mcp/issues"
Repository = "https://github.com/sandraschi/local-llm-mcp"

[project.scripts]
llm-mcp = "llm_mcp.main:cli"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'



[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
